; ModuleID = '/home/carl/AnghaBench/esp-idf/components/openssl/platform/extr_ssl_pm.c_pkey_pm_free.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/openssl/platform/extr_ssl_pm.c_pkey_pm_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }
%struct.pkey_pm = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pkey_pm_free(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.pkey_pm*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = load i32*, i32** %5, align 8
  %7 = bitcast i32* %6 to %struct.pkey_pm*
  store %struct.pkey_pm* %7, %struct.pkey_pm** %3, align 8
  %8 = load %struct.pkey_pm*, %struct.pkey_pm** %3, align 8
  %9 = getelementptr inbounds %struct.pkey_pm, %struct.pkey_pm* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %23

12:                                               ; preds = %1
  %13 = load %struct.pkey_pm*, %struct.pkey_pm** %3, align 8
  %14 = getelementptr inbounds %struct.pkey_pm, %struct.pkey_pm* %13, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = call i32 @mbedtls_pk_free(i32* %15)
  %17 = load %struct.pkey_pm*, %struct.pkey_pm** %3, align 8
  %18 = getelementptr inbounds %struct.pkey_pm, %struct.pkey_pm* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @ssl_mem_free(i32* %19)
  %21 = load %struct.pkey_pm*, %struct.pkey_pm** %3, align 8
  %22 = getelementptr inbounds %struct.pkey_pm, %struct.pkey_pm* %21, i32 0, i32 0
  store i32* null, i32** %22, align 8
  br label %23

23:                                               ; preds = %12, %1
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  %26 = load i32*, i32** %25, align 8
  %27 = call i32 @ssl_mem_free(i32* %26)
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  store i32* null, i32** %29, align 8
  ret void
}

declare dso_local i32 @mbedtls_pk_free(i32*) #1

declare dso_local i32 @ssl_mem_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
